--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 #pageContainer {
   width: 100%;
   height: 100%;
@@ -25,6 +29,75 @@ body {
   align-items: center;
 }
 
+#mastHeadContainer button:not(.searchButton),
+#mastHeadContainer .rightIcons img {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+  box-sizing: border-box;
+  border: none;
+  background-color: transparent;
+}
+
+#navShowHide > img {
+  width: 100%;
+  height: 100%;
+}
+
+.logoContainer {
+  width: 150px;
+  height: 25px;
+  padding-left: 15px;
+  color: #000;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+#mastHeadContainer img {
+  height: 100%;
+}
+
+#mastHeadContainer .searchBarContainer {
+  margin: 0 40px;
+  flex: 1;
+}
+
+.searchBarContainer form {
+  flex: 1;
+  display: flex;
+}
+
+.searchBarContainer form input {
+  flex: 1;
+  max-width: 600px;
+  color: #111;
+  padding: 2px 6px;
+  font-size: 14px;
+  font-weight: 100;
+  border: 1px solid #ccc;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+  border-right: none;
+  height: 32px;
+  box-shadow: #eee 0px 1px 2px 0 inset;
+}
+
+.searchBarContainer .searchButton {
+  height: 32px;
+  background-color: #f8f8f8;
+  border: 1px solid #d3d3d3;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  cursor: pointer;
+  width: 65px;
+}
+
+.searchBarContainer .searchButton img {
+  height: 20px;
+  width: auto;
+}
+
 #sideNavContainer {
   width: 240px;
   background-color: #f5f5f5;
@@ -39,7 +112,6 @@ body {
 #mainSectionContainer {
   padding-top: 56px;
   display: flex;
-  padding-left: 240px;
 }
 
 #mainContentContainer {
