--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,4 +116,18 @@ a {
 
 #mainContentContainer {
   padding: 10px 30px;
+  display: flex;
+  flex: 1;
+}
+
+.column {
+  flex: 1;
+  background-color: #fff;
+  min-height: 300px;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
+}
+
+.form-group {
+  margin-bottom: 15px;
 }
